--- a/minatures.ini
+++ b/minatures.ini
@@ -57,7 +57,7 @@ filament_max_volumetric_speed = 15
 filament_minimal_purge_on_wipe_tower = 5
 filament_notes = "List of materials tested with standard PLA print settings for MK3:\n\n\nEsun PLA\nPush PLastic PLA\nInland PLA\n3DXTech PLA"
 filament_ramming_parameters = "120 100 6.6 6.8 7.2 7.6 7.9 8.2 8.7 9.4 9.9 10.0| 0.05 6.6 0.45 6.8 0.95 7.8 1.45 8.3 1.95 9.7 2.45 10 2.95 7.6 3.45 7.6 3.95 7.6 4.45 7.6 4.95 7.6"
-filament_settings_id = "Pretty PLA V3.ini (Chris Pretty PLA)"
+filament_settings_id = "WS Miniature Set"
 filament_soluble = 0
 filament_toolchange_delay = 0
 filament_type = PLA
@@ -130,10 +130,10 @@ perimeter_speed = 45
 perimeters = 3
 post_process = 
 print_host = 
-print_settings_id = 0.10mm DETAIL 0.25 nozzle MK3
+print_settings_id = WS Miniature Set 0.10mm
 printer_model = MK3
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_PRUSA3D\nPRINTER_MODEL_MK3\n
-printer_settings_id = Original Prusa i3 MK3 0.25 nozzle
+printer_settings_id = WS Miniature Set 0.25 nozzle
 printer_variant = 0.25
 printer_vendor = 
 printhost_apikey = 
